--- a/app/views/team/register_team_view.html
+++ b/app/views/team/register_team_view.html
@@ -1,4 +1,4 @@
 <section class="jumbotron">
-  <h1>Registered Users will be able to register team</h1>
+  <h1>Forms for register team and players</h1>
   <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 </section>
