--- a/src/views/auth/signin_view.html
+++ b/src/views/auth/signin_view.html
@@ -1,4 +1,8 @@
-<section class="jumbotron">
-    <h1>SignIn View</h1>
-    <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  </section>
+<section>
+    <form>
+    	<input type="email" name="email" value=""/>
+		<input type="password" name="password" value=""/>
+		<input type="confirmpassword" name="confirmpassword" value=""/>
+        <input type="submit" name="signin" value="Sign-In"/>
+    </form> 
+</section>
