--- a/src/views/auth/signup_view.html
+++ b/src/views/auth/signup_view.html
@@ -1,4 +1,7 @@
-<section class="jumbotron">
-    <h1>SignUp View</h1>
-    <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  </section>
+<section>
+    <form>
+    	<input type="email" name="email" value=""/>
+		<input type="password" name="password" value=""/>
+        <input type="submit" name="signup" value="Sign-Up"/>
+    </form> 
+</section>
