added file structure and partials to views directory

--- a/src/views/admin/addSeason/addSeason_view.html
+++ b/src/views/admin/addSeason/addSeason_view.html
@@ -2,6 +2,6 @@
     <form>
 		<input type="text" name="seasonNumber" value=""/>
 		<input type="text" name="seasonName" value=""/>
-        <input type="submit" name="submitseason" value="Submit"/>
+        <input type="submit" name="submitseason" value="Add Season"/>
     </form> 
 </section>
