partials html structure complete

--- a/src/views/admin/admin_view.html
+++ b/src/views/admin/admin_view.html
@@ -1,4 +1,7 @@
-  <section class="jumbotron">
-    <h1>Page for Admin</h1>
-    <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  </section>
+<section>
+
+<div>
+<!--this is where injectable partials will go-->
+</div>
+
+</section>
