--- a/src/views/home/home_view.html
+++ b/src/views/home/home_view.html
@@ -1,4 +1,292 @@
-<section class="jumbotron">
-  <h1>Tournament tables</h1>
-  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+<section>
+  <h2>Division A</h2>
+  <table>
+    <tr>
+      <th>Position</th>
+      <th>Standing</th>
+      <th>Team</th>
+      <th>Played</th>
+      <th>Won</th>
+      <th>Lost</th>
+      <th>Baskets</th>
+      <th>Difference</th>
+      <th>Points</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>=</td>
+      <td>ДЫМ</td>
+      <td>11</td>
+      <td>11</td>
+      <td>0</td>
+      <td>774:516</td>
+      <td>258</td>
+      <td>22</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>+</td>
+      <td>МНТУ</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>671:516</td>
+      <td>155</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>-</td>
+      <td>Playmaker</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>657:584</td>
+      <td>73</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>+</td>
+      <td>Десна</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>593:578</td>
+      <td>15</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>+</td>
+      <td>ФВТ</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>581:592</td>
+      <td>-11</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>-</td>
+      <td>Баски</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>618:654</td>
+      <td>-36</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>=</td>
+      <td>ДЫМ</td>
+      <td>11</td>
+      <td>11</td>
+      <td>0</td>
+      <td>774:516</td>
+      <td>258</td>
+      <td>22</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>+</td>
+      <td>МНТУ</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>671:516</td>
+      <td>155</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>-</td>
+      <td>Playmaker</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>657:584</td>
+      <td>73</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>+</td>
+      <td>Десна</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>593:578</td>
+      <td>15</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>+</td>
+      <td>ФВТ</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>581:592</td>
+      <td>-11</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>-</td>
+      <td>Баски</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>618:654</td>
+      <td>-36</td>
+      <td>16</td>
+  </table>
+
+  <h2>Division B</h2>
+  <<table>
+    <tr>
+      <th>Position</th>
+      <th>Standing</th>
+      <th>Team</th>
+      <th>Played</th>
+      <th>Won</th>
+      <th>Lost</th>
+      <th>Baskets</th>
+      <th>Difference</th>
+      <th>Points</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>=</td>
+      <td>ДЫМ</td>
+      <td>11</td>
+      <td>11</td>
+      <td>0</td>
+      <td>774:516</td>
+      <td>258</td>
+      <td>22</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>+</td>
+      <td>МНТУ</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>671:516</td>
+      <td>155</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>-</td>
+      <td>Playmaker</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>657:584</td>
+      <td>73</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>+</td>
+      <td>Десна</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>593:578</td>
+      <td>15</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>+</td>
+      <td>ФВТ</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>581:592</td>
+      <td>-11</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>-</td>
+      <td>Баски</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>618:654</td>
+      <td>-36</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>=</td>
+      <td>ДЫМ</td>
+      <td>11</td>
+      <td>11</td>
+      <td>0</td>
+      <td>774:516</td>
+      <td>258</td>
+      <td>22</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>+</td>
+      <td>МНТУ</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>671:516</td>
+      <td>155</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>-</td>
+      <td>Playmaker</td>
+      <td>11</td>
+      <td>9</td>
+      <td>2</td>
+      <td>657:584</td>
+      <td>73</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>+</td>
+      <td>Десна</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>593:578</td>
+      <td>15</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>+</td>
+      <td>ФВТ</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>581:592</td>
+      <td>-11</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>-</td>
+      <td>Баски</td>
+      <td>11</td>
+      <td>5</td>
+      <td>6</td>
+      <td>618:654</td>
+      <td>-36</td>
+      <td>16</td>
 </section>
