--- a/src/views/team/register_team_view.html
+++ b/src/views/team/register_team_view.html
@@ -1,4 +1,49 @@
-<section class="jumbotron">
-  <h1>Forms for register team and players</h1>
-  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+<section>
+  
+  <form>
+    <h1>Team</h1>
+    <input type="text" name="teamname" value="">
+    <input type="text" name="division" value="">
+    <input type="text" name="season" value="">
+    <input type="text" name="players" value="">
+    <input type="file" name="pic" accept="image/*">
+    <h2>Administrator</h2>
+    <input type="text" name="adminFirstname" value="">
+    <input type="text" name="adminMiddlename" value="">
+    <input type="text" name="adminLastname" value="">
+    <input type="email" name="adminEmail" value="">
+    <input type="phone" name="adminPhone" value="">
+    <h2>Captain</h2>
+    <input type="text" name="capFirstname" value="">
+    <input type="text" name="capMiddlename" value="">
+    <input type="text" name="capLastname" value="">
+    <input type="email" name="capEmail" value="">
+    <input type="phone" name="capPhone" value="">
+    <h2>Coach</h2>
+    <input type="text" name="coachFirstname" value="">
+    <input type="text" name="coachMiddlename" value="">
+    <input type="text" name="coachLastname" value="">
+    <input type="email" name="coachEmail" value="">
+    <input type="phone" name="coachPhone" value="">
+    <input type="file" name="teampic" accept="image/*">
+    <input type="submit" name="submitTeam" value="Submit Team Info.">
+  </form>
+
+  <form>
+    <input type="text" name="firstname" value="">
+    <input type="text" name="middlename" value="">
+    <input type="text" name="lastname" value="">
+    <input type="email" name="firstname" value="">
+    <input type="phone" name="phone" value="">
+    <input type="date" name="dob" value="">
+    <input type="text" name="age" value="">
+    <input type="text" name="height" value="">
+    <input type="text" name="weight" value="">
+    <input type="text" name="number" value="">
+    <input type="text" name="position" value="">
+    <input type="file" name="playerpic" accept="image/*">
+    <button type="button" name="delete" value="Delete">
+    <button type="button" name="edit" value="Edit">
+    <input type="submit" name="submitPlayer" value="Submit Player Info.">
+  </form>
 </section>
