admin-view navbar

--- a/src/views/admin/admin_view.html
+++ b/src/views/admin/admin_view.html
@@ -1,6 +1,12 @@
 <section data-ng-if="isAdmin">
-
-<div>
+<ul>
+  <li><a ui-sref="admin.addSeason">Add Season</a></li>
+  <li><a ui-sref="admin.addGame">Add Game</a></li>
+  <li><a ui-sref="admin.addTeam">Add Team</a></li>
+  <li><a ui-sref="admin.addScore">Add Score</a></li>
+  <li><a ui-sref="admin.changeTable">Change Table</a></li>
+</ul>
+<div ui-view>
 <!--this is where injectable partials will go-->
 </div>
 
