--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,9 +1,9 @@
 header {
 	background-color: white;
-	padding-bottom: 2em;
 	h1 {
 		color: $primary-font-color;
 		margin: 0;
+		text-shadow: 1px 1px 1px #CCCCCC;
 	}
 
 }
@@ -17,13 +17,24 @@ header {
 		text-decoration: none;
 		font-size: em(16);
 		font-family: Roboto-bold;
-		padding-right: 1em;
+		margin-right: 1em;
 		color: $primary-font-color;
+		text-shadow: 1px 1px 1px #CCCCCC;
 
 	}
 }
+.header-nav ul li a:hover {
+	color: $highlight;
+	border-bottom: .125em solid $primary-font-color;
+
+}
+.header-nav ul li a:active {
+	//border-bottom: .15em solid $primary-font-color;
+	color: $drk-head-color;
+}
 .header-section {
 	@extend %flex-box;
+	align-items: center;
 	font-size: em(36);
 	img {
 		width: 2em;
@@ -32,5 +43,6 @@ header {
 }
 .logo-header {
 	@extend %flex-box;
-	justify-content: flex-start;
+	align-items: center;
+	height: 4em;
 }
