--- a/src/views/admin/addSeason/addSeason_view.html
+++ b/src/views/admin/addSeason/addSeason_view.html
@@ -1,9 +1,8 @@
 <section data-ng-controller="AddSeasonController">
-    <form>
+    <form ng-submit="createSeason(season)">
 		  <input type="text" name="seasonNumber" value=""/>
 		  <input type="text" name="seasonName" value=""/>
       <input type="submit" name="submitseason" value="Submit"/>
-      <button data-ng-click="createSeason(season)">Create Season</button>
     </form>
 </section>
 
