updating add season controller and view

--- a/src/views/admin/addSeason/addSeason_view.html
+++ b/src/views/admin/addSeason/addSeason_view.html
@@ -1,8 +1,8 @@
 <section data-ng-controller="AddSeasonController">
-    <form ng-submit="createSeason(season)">
-		  <input type="text" name="seasonNumber" value=""/>
-		  <input type="text" name="seasonName" value=""/>
-      <input type="submit" name="submitseason" value="Submit"/>
+    <form data-ng-submit="createSeason(season)">
+		  <input type="text" data-ng-model="seasonNumber" value=""/>
+		  <input type="text" data-ng-model="seasonName" value=""/>
+      <input type="submit" name="submitSeason" value="Submit"/>
     </form>
 </section>
 
