Finish working on footer

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -36,6 +36,7 @@ header {
 	@extend %flex-box;
 	align-items: center;
 	font-size: em(36);
+	height: 3em;
 	img {
 		width: 2em;
 		fill: $highlight;
