--- a/src/styles/base/_main_design.scss
+++ b/src/styles/base/_main_design.scss
@@ -2,7 +2,10 @@ html {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+
 }
 body {
 	background-color: $main-bk-color;
+	height: 100%;
+	font-family: Roboto-regular, sans-serif;
 }
