--- a/src/styles/utils/_placeholders.scss
+++ b/src/styles/utils/_placeholders.scss
@@ -6,4 +6,25 @@
 	align-items: flex-start;
 	align-content: center;
 }
+%main-button {
+	color: white;
+	font-family: Roboto-bold;
+	background-color: $highlight;
+	font-size: em(16);
+	opacity: .9;
+	border-radius: 5px; 
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px; 
+	border: .5em solid $highlight;
+	padding-left: 2em; 
+	padding-right: 2em;
+	text-decoration: none;
+}
 
+%left-padding {
+	padding-left: 1em;
+}
+
+%right-padding {
+	padding-right: 1em;
+}
