--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -13,6 +13,7 @@ $light-font-color: #afbaca;
 
 //button color & basketball icon color
 $highlight: #9aca40;
+$dark-highlight: #85b231;
 
 $btn-color: #0d47a1;
 $btn-hover-color: #2196f3;
