updating add season controller getting teams not in season

--- a/src/views/admin/addSeason/addSeason_view.html
+++ b/src/views/admin/addSeason/addSeason_view.html
@@ -14,5 +14,13 @@
                         required>
       <input type="submit" name="submitSeason" value="Submit">
     </form>
+
+    <ul id="teamsNotInSeason">
+      <li data-ng-init="getSome()" data-ng-repeat="teams in season">
+        <span data-ng-if="">{{teamText}}
+           <button data-ng-click="addToSeason()">Add To Season</button>
+        </span>
+      </li>
+    </ul>
 </section>
 
