--- a/src/styles/components/_standings.scss
+++ b/src/styles/components/_standings.scss
@@ -25,9 +25,10 @@
 	width: 100%;
 }
 .standings-only-table, th, td {
-   border-bottom: 1px solid black;
+   border-bottom: 1px solid $main-bk-color;
    text-align:center; 
    vertical-align:middle;
+   padding-top: .5em;
 }
 
 .standings-only-table td:nth-child(2), .standings-only-table th:nth-child(2) {
