--- a/src/views/home/home_view.html
+++ b/src/views/home/home_view.html
@@ -17,7 +17,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>Ukrainian Ballers</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/girl.svg">Ukrainian Ballers</td>
         <td>=</td>
         <td>11</td>
         <td>11</td>
@@ -29,7 +29,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>Seattle Smashers</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/dunk.svg">Seattle Smashers</td>
         <td>+</td>
         <td>11</td>
         <td>9</td>
@@ -41,7 +41,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>Playmaker</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/dribble.svg">Playmaker</td>
         <td>-</td>
         <td>11</td>
         <td>9</td>
@@ -53,7 +53,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td>Awesome Tigers</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/panther.svg">Awesome Panthers</td>
         <td>+</td>
         <td>11</td>
         <td>5</td>
@@ -65,7 +65,7 @@
       </tr>
       <tr>
         <td>5</td>
-        <td>Champions</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/first.svg">Champions</td>
         <td>+</td>
         <td>11</td>
         <td>5</td>
@@ -77,7 +77,7 @@
       </tr>
       <tr>
         <td>6</td>
-        <td>Organized Chaos</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/strategy.svg">Organized Chaos</td>
         <td>-</td>
         <td>11</td>
         <td>5</td>
@@ -87,84 +87,13 @@
         <td>36</td>
         <td>16</td>
       </tr>
-      <tr>
-        <td>7</td>
-        <td>Desert Storm</td>
-        <td>=</td>
-        <td>11</td>
-        <td>11</td>
-        <td>0</td>
-        <td>774</td>
-        <td>516</td>
-        <td>258</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td>Мight Warriors</td>
-        <td>+</td>
-        <td>11</td>
-        <td>9</td>
-        <td>2</td>
-        <td>671</td>
-        <td>516</td>
-        <td>155</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>Hurricane Wild</td>
-        <td>-</td>
-        <td>11</td>
-        <td>9</td>
-        <td>2</td>
-        <td>657</td>
-        <td>584</td>
-        <td>73</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>10</td>
-        <td>Fuzzy Alpaca's</td>
-        <td>+</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>593</td>
-        <td>578</td>
-        <td>15</td>
-        <td>16</td>
-      </tr>
-      <tr>
-        <td>11</td>
-        <td>The Originals</td>
-        <td>+</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>581</td>
-        <td>592</td>
-        <td>11</td>
-        <td>16</td>
-      </tr>
-      <tr>
-        <td>12</td>
-        <td>Hunters</td>
-        <td>-</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>618</td>
-        <td>654</td>
-        <td>36</td>
-        <td>16</td>
     </table>
   </section>
   <section class="standings-section">
     <h1>Ultimate League</h1>
     <h2>Standings</h2>
     <table class="standings-only-table">
-      <tr>
+        <tr>
         <th>#</th>
         <th>Team</th>
         <th>SS</th>
@@ -176,9 +105,21 @@
         <th>BD</th>
         <th>PTS</th>
       </tr>
-      <tr>
+       <tr>
         <td>1</td>
-        <td>Ukrainian Ballers</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/flame.svg">Flame of Destiny</td>
+        <td>-</td>
+        <td>11</td>
+        <td>5</td>
+        <td>6</td>
+        <td>618</td>
+        <td>654</td>
+        <td>36</td>
+        <td>16</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/mountain.svg">Mighty Mountains</td>
         <td>=</td>
         <td>11</td>
         <td>11</td>
@@ -189,8 +130,8 @@
         <td>22</td>
       </tr>
       <tr>
-        <td>2</td>
-        <td>Seattle Smashers</td>
+        <td>3</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/knight.svg">The Knights</td>
         <td>+</td>
         <td>11</td>
         <td>9</td>
@@ -198,83 +139,11 @@
         <td>671</td>
         <td>516</td>
         <td>155</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Playmaker</td>
-        <td>-</td>
-        <td>11</td>
-        <td>9</td>
-        <td>2</td>
-        <td>657</td>
-        <td>584</td>
-        <td>73</td>
         <td>20</td>
       </tr>
       <tr>
         <td>4</td>
-        <td>Awesome Tigers</td>
-        <td>+</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>593</td>
-        <td>578</td>
-        <td>15</td>
-        <td>16</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>Champions</td>
-        <td>+</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>581</td>
-        <td>592</td>
-        <td>11</td>
-        <td>16</td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td>Organized Chaos</td>
-        <td>-</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>618</td>
-        <td>654</td>
-        <td>36</td>
-        <td>16</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td>Desert Storm</td>
-        <td>=</td>
-        <td>11</td>
-        <td>11</td>
-        <td>0</td>
-        <td>774</td>
-        <td>516</td>
-        <td>258</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td>Мight Warriors</td>
-        <td>+</td>
-        <td>11</td>
-        <td>9</td>
-        <td>2</td>
-        <td>671</td>
-        <td>516</td>
-        <td>155</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>Hurricane Wild</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/star.svg">Wild Stars</td>
         <td>-</td>
         <td>11</td>
         <td>9</td>
@@ -285,8 +154,8 @@
         <td>20</td>
       </tr>
       <tr>
-        <td>10</td>
-        <td>Fuzzy Alpaca's</td>
+        <td>5</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/dart.svg">Bullseye Battlers</td>
         <td>+</td>
         <td>11</td>
         <td>5</td>
@@ -297,8 +166,8 @@
         <td>16</td>
       </tr>
       <tr>
-        <td>11</td>
-        <td>The Originals</td>
+        <td>6</td>
+        <td><img class="sport-icons" src="styles/fonts/sports-icons/shirt.svg">The Originals</td>
         <td>+</td>
         <td>11</td>
         <td>5</td>
@@ -308,17 +177,6 @@
         <td>11</td>
         <td>16</td>
       </tr>
-      <tr>
-        <td>12</td>
-        <td>Hunters</td>
-        <td>-</td>
-        <td>11</td>
-        <td>5</td>
-        <td>6</td>
-        <td>618</td>
-        <td>654</td>
-        <td>36</td>
-        <td>16</td>
     </table>
   </section>
 </section>
