adding js logic for admin game and score controllers

--- a/src/views/admin/addGame/addGame_view.html
+++ b/src/views/admin/addGame/addGame_view.html
@@ -1,9 +1,9 @@
-<section>
+<section data-ng-init="">
   <form>
     <p><input type="radio" name="division" value="a">Division A</p>
 		<p><input type="radio" name="division" value="b">Division B</p>
-		<input type="text" name="team1" value=""/>
-		<input type="text" name="team2" value=""/>
+		<input type="text" name="team1" value="">
+		<input type="text" name="team2" value="">
 		<select>
       <option value="Team 1">Team 1</option>
       <option value="Team 2">Team 2</option>
@@ -13,6 +13,6 @@
     <input type="date" name="gameday">
     <input type="time" name="gametime">
     <input type="address" name="gamelocation">
-    <input type="submit" name="addgame" value="Add Game"/>
-  </form> 
+    <input type="submit" name="addgame" value="Add Game">
+  </form>
 </section>
