--- a/src/views/admin/addScore/addScore_view.html
+++ b/src/views/admin/addScore/addScore_view.html
@@ -1,4 +1,4 @@
-<section>
+<section data-ng-init="">
   <form>
     <select>
       <option value="Game 1">Game 1</option>
@@ -6,10 +6,10 @@
       <option value="Game 3">Game 3</option>
       <option value="Game 4">Game 4</option>
     </select>
-		<input type="text" name="team1name" value=""/>
-    <input type="text" name="team1score" value=""/>
-		<input type="text" name="team2name" value=""/>
-    <input type="text" name="team2score" value=""/>
-    <input type="submit" name="addscore" value="Add Score"/>
-  </form> 
+		<input type="text" name="team1name" value="">
+    <input type="text" name="team1score" value="">
+		<input type="text" name="team2name" value="">
+    <input type="text" name="team2score" value="">
+    <input type="submit" name="addscore" value="Add Score">
+  </form>
 </section>
