--- a/src/views/admin/addTeam/addTeam_view.html
+++ b/src/views/admin/addTeam/addTeam_view.html
@@ -1,4 +1,12 @@
-<section data-ng-controller="AddSeasonController">
+<section data-ng-init="getSome()">
+  <ul id="teamsNotInSeason">
+      <li data-ng-repeat="teams in teamArray">
+        <span data-ng-if="true">{{teams.name}}
+           <button data-ng-click="addTeamToSeason()">Add Team To Season</button>
+        </span>
+      </li>
+    </ul>
+
   <form name="createTeamForm" data-ng-submit="createTeam()" role="form">
     <select>
       <option value="team1">Team 1</option>
@@ -9,6 +17,6 @@
     <button type="closeteam">Close Team</button>
       <div>
       </div>
-    <input type="submit" name="addteamtoseason" value="Add Team to Season">
+    <input type="submit" name="addTeamToSeason" value="Add Team to Season">
   </form>
 </section>
